--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   },
   "dependencies": {
     "@types/jest": "^29.5.8",
+    "@types/pg": "^8.11.6",
     "@types/supertest": "^2.0.16",
     "dotenv": "^16.3.1",
+    "inversify": "^6.0.2",
     "jest": "^29.7.0",
+    "node-telegram-bot-api": "^0.66.0",
+    "pg": "^8.12.0",
+    "reflect-metadata": "^0.2.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
+    "@types/node-telegram-bot-api": "^0.64.7",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "dotenv": "^16.3.1",
